index.htmlファイルを変更

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
   <div class="overlay">
     <nav class="overlay-menu">
       <ul>
-        <li class="overlay__menu__list"><a href="works.html" class="overlay__home">
+        <li class="overlay__menu__list"><a href="index.html" class="overlay__home">
           <span class="text--letterspace">Work</span>s
         </a></li>
         <li class="overlay__menu__list"><a href="about.html" class="overlay__works">
