--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>RyosukeFujiki Portfolio</title>
+  <title>RyosukeFujiki Portfolio | Works</title>
   <link rel="stylesheet" href="css/reset.css">
-  <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans:700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/swiper.css">
-  <link rel="stylesheet" href="css/home.css">
+  <link rel="stylesheet" href="css/work.css">
   <link rel="shortcut icon" href="images/home/favicon.ico" >
   <link rel="apple-touch-icon" size="152x152" href="/images/home/apple-touch-icon.png">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -45,7 +45,7 @@
   <div class="overlay">
     <nav class="overlay-menu">
       <ul>
-        <li class="overlay__menu__list"><a href="works.html" class="overlay__home">
+        <li class="overlay__menu__list"><a href="index.html" class="overlay__home">
           <span class="text--letterspace">Work</span>s
         </a></li>
         <li class="overlay__menu__list"><a href="about.html" class="overlay__works">
@@ -74,96 +74,101 @@
 
       </ul>
     </nav>
-    </div>
-
-    <div class="swiper-container">
-    <div class="swiper-wrapper">
-      <!-- <div class="swiper-slide">
-        <div class="contents__bg">
-        </div>
-        <div class="trim">
-          <a href="familybook.html"><img src="images/home/hive.png" alt="" class="contents__work__img"></a>
-        </div>
-      </div> -->
-
-      <div class="swiper-slide">
-        <div class="contents__bg">
-        </div>
-        <div class="trim">
-          <a href="hive.html"><img src="images/home/hive_home.png" alt="" class="contents__work__img">
-            <!-- <div class="caption">
-              <h3>かぞくが、ものがたり。</h3>
-              <p>Produce Design / Graphic Design</p>
-            </div> -->
-          </a>
-        </div>
-      </div>
-
-
-      <div class="swiper-slide">
-        <div class="contents__bg">
-        </div>
-        <div class="trim">
-          <a href="familybook.html"><img src="images/home/familybook_home.png" alt="" class="contents__work__img">
-            <!-- <div class="caption">
-              <h3>かぞくが、ものがたり。</h3>
-              <p>Produce Design / Graphic Design</p>
-            </div> -->
-          </a>
-        </div>
-      </div>
-
-      <div class="swiper-slide">
-        <div class="contents__bg">
-        </div>
-        <div class="trim lineandballTrim">
-          <a href="lineandball.html"><img src="images/home/lineandball.png" alt="" class="contents__work__img"></a>
-        </div>
-      </div>
-
-      <div class="swiper-slide">
-        <div class="contents__bg">
-        </div>
-        <div class="trim">
-          <a href="scrapboard.html"><img src="images/home/scrapboard.png" alt="" class="contents__work__img"></a>
-        </div>
-      </div>
-
-      <div class="swiper-slide">
-        <div class="contents__bg">
-        </div>
-        <div class="trim  playfulfesTrim">
-          <a href="playfulfes.html"><img src="images/home/playfulfes.png" alt="" class="contents__work__img"></a>
-        </div>
-      </div>
-
-
-<!--
-      <div class="swiper-slide">
-        <div class="contents__bg">
-        </div>
-        <div class="trim">
-          <a href=""><img src="images/home/awa.png" alt="" class="contents__work__img"></a>
-        </div>
-      </div> -->
-
-
-
-
-    </div>
-    <!-- Add Pagination -->
-    <div class="swiper-pagination"></div>
-    <!-- Add Arrows -->
-    <div class="swiper-button-next">
-      Next →
-    </div>
-    <div class="swiper-button-prev">
-      ← Prev
-    </div>
   </div>
 
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.1.6/js/swiper.min.js"></script>
-  <script src="js/swipe.js"></script>
+
+ <h1 class="heading"><span class="text--letterspace">Work</span>s</h1>
+
+ <section class="work__contents clearfix">
+
+
+   </div>
+
+   <div class="swiper-slide swiper-slide-left">
+     <a href="hive.html">
+     <div class="contents__bg">
+     </div>
+     <div class="trim">
+       <img src="images/home/hive_home.png" alt="" class="contents__work__img">
+     </div>
+     <p class="contents__title">UI / UX Design</p>
+     <p class="contents__category">Hive</p>
+     </a>
+   </div>
+
+   <div class="swiper-slide swiper-slide-right">
+     <a href="familybook.html">
+     <div class="contents__bg">
+     </div>
+     <div class="trim">
+       <img src="images/home/familybook_home.png" alt="" class="contents__work__img">
+     </div>
+     <p class="contents__title">Planning</p>
+     <p class="contents__category">かぞくが、ものがたり。</p>
+     </a>
+   </div>
+
+   <div class="swiper-slide  swiper-slide-left">
+     <a href="lineandball.html">
+     <div class="contents__bg">
+     </div>
+     <div class="trim">
+       <img src="images/home/lineandball.png" alt="" class="contents__work__img">
+     </div>
+     <p class="contents__title">Game Design</p>
+     <p class="contents__category">LINE and BALL</p>
+     </a>
+   </div>
+
+   <div class="swiper-slide  swiper-slide-right">
+     <a href="playfulfes.html">
+     <div class="contents__bg">
+     </div>
+     <div class="trim">
+       <img src="images/home/playfulfes.png" alt="" class="contents__work__img">
+     </div>
+     <p class="contents__title">Web Design</p>
+     <p class="contents__category">プレイフルフェス 2018 Winter</p>
+     </a>
+   </div>
+
+   <div class="swiper-slide swiper-slide-left">
+     <a href="scrapboard.html">
+     <div class="contents__bg">
+     </div>
+     <div class="trim">
+       <img src="images/home/scrapboard02.png" alt="" class="contents__work__img">
+     </div>
+     <p class="contents__title">UI / UX Design</p>
+     <p class="contents__category">Scrap Board</p>
+     </a>
+   </div>
+
+
+
+
+
+   <!-- <div class="swiper-slide">
+     <a href="">
+     <div class="contents__bg">
+     </div>
+     <div class="trim">
+       <img src="images/home/awa.png" alt="" class="contents__work__img">
+     </div>
+     </a>
+   </div> -->
+
+
+
+
+   <!-- <a href="" class="about__contact">Contact Me!</a> -->
+ </section>
+
+<!-- #f9f9f9 #d5d5d5 -->
+ <footer class="footer">
+   © 2018 Ryosuke Fujiki
+ </footer>
+
 </body>
 </html>
