--- a/works.html
+++ b/works.html
@@ -45,7 +45,7 @@
   <div class="overlay">
     <nav class="overlay-menu">
       <ul>
-        <li class="overlay__menu__list"><a href="works.html" class="overlay__home">
+        <li class="overlay__menu__list"><a href="index.html" class="overlay__home">
           <span class="text--letterspace">Work</span>s
         </a></li>
         <li class="overlay__menu__list"><a href="about.html" class="overlay__works">
@@ -129,7 +129,7 @@
        <img src="images/home/playfulfes.png" alt="" class="contents__work__img">
      </div>
      <p class="contents__title">Web Design</p>
-     <p class="contents__category">Playfulfes</p>
+     <p class="contents__category">プレイフルフェス 2018 Winter</p>
      </a>
    </div>
 
@@ -141,7 +141,7 @@
        <img src="images/home/scrapboard02.png" alt="" class="contents__work__img">
      </div>
      <p class="contents__title">UI / UX Design</p>
-     <p class="contents__category">Scrapboard</p>
+     <p class="contents__category">Scrap Board</p>
      </a>
    </div>
 
