その他の作品についての追加

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
  <section class="work__contents clearfix">
 
 
-   </div>
+   <!-- </div> -->
 
    <div class="swiper-slide swiper-slide-left">
      <a href="hive.html">
