--- a/works.html
+++ b/works.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/websaite#">
-<meta property="og:url" content="https:://ryosukefujiki.design" />
+<meta property="og:url" content="https://ryosukefujiki.design" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="RyosukeFujiki Portfolio" />
 <meta property="og:description" content="藤木良祐のポートフォリオサイト" />
 <meta property="og:site_name" content="RyosukeFujiki Portfolio" />
-<meta property="og:image" content="https:://ryosukefujiki.design/images/home/ogp.png" />
-<meta name="twitter:card" content="Summary Card" />
+<meta property="og:image" content="https://ryosukefujiki.design/images/home/ogp.png" />
+
+<meta name="twitter:card" content="summary large image" />
+<meta name="twitter:description" content="藤木良祐のポートフォリオサイト"/>
+<meta name="twitter:title" content="RyosukeFujiki Portfolio" />
 <meta name="twitter:site" content="@totepo18" />
+<meta name="twitter:image" content="https://ryosukefujiki.design/images/home/ogp.png" />
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
