--- a/works.html
+++ b/works.html
@@ -7,6 +7,8 @@
 <meta property="og:description" content="藤木良祐のポートフォリオサイト" />
 <meta property="og:site_name" content="RyosukeFujiki Portfolio" />
 <meta property="og:image" content="https://ryosukefujiki.design/images/home/ogp.png" />
+<meta property="og:image:width" content="1296" />
+<meta property="og:image:height" content="655" />
 
 <meta name="twitter:card" content="summary large image" />
 <meta name="twitter:description" content="藤木良祐のポートフォリオサイト"/>
