--- a/lineandball.html
+++ b/lineandball.html
@@ -3,6 +3,7 @@
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/websaite#">
 <meta property="og:url" content="https://ryosukefujiki.design" />
 <meta property="og:type" content="website" />
+<meta property="fb:app_id" content="828074940735241" />
 <meta property="og:title" content="RyosukeFujiki Portfolio" />
 <meta property="og:description" content="藤木良祐のポートフォリオサイト" />
 <meta property="og:site_name" content="RyosukeFujiki Portfolio" />
