--- a/playfulfes.html
+++ b/playfulfes.html
@@ -11,7 +11,7 @@
 <meta property="og:image:width" content="1296" />
 <meta property="og:image:height" content="655" />
 
-<meta name="twitter:card" content="summary large image" />
+<meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:description" content="藤木良祐のポートフォリオサイト"/>
 <meta name="twitter:title" content="RyosukeFujiki Portfolio" />
 <meta name="twitter:site" content="@totepo18" />
