--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <li class="overlay__menu__list"><a href="https://note.mu/ryosukefujiki" target = "_blank" class="overlay__about">
           <span class="text--letterspace">Blog</span>s
         </a></li>
-        <li class="overlay__menu__list"><a href="" class="overlay__resume"  target="_blank">
+        <li class="overlay__menu__list"><a href="resume.pdf" class="overlay__resume"  target="_blank">
           <span class="text--letterspace">Resum</span>e
         </a></li>
 
