premiereの文言修正 about.html

--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
        <h2 class="about__skill__title">My Skill</h2><br>
        <p class="about__skill__details">
         Adobe Illustrator / Photoshop<br>
-        Adobe Premire / AfterEffects<br>
+        Adobe Premiere / AfterEffects<br>
         HTML  / CSS /  JavaScript /  Python<br>
         Sketch<br>
         ProtoPie<br>
