divタグにhrefをなぜか入れていたのを削除した

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <a href="index.html" class="header__title">
             <img src="images/Header/HeaderTitleImg.png" alt="" class="header__title__img">
         </a>
-        <div href="" class="header__button">
+        <div class="header__button">
             <img src="images/Header/HeaderTitleMenu.png" alt="" class="header__button__img">
             <span></span>
             <span></span>
