--- a/familybook.html
+++ b/familybook.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/work_detail.css">
     <link rel="shortcut icon" href="images/home/favicon.ico">
-    <link rel="apple-touch-icon" size="152x152" href="/images/home/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="/images/home/apple-touch-icon.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="js/header_menu.js">
     </script>
