works一覧のホバーアニメーションの変更

--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
             <div class="about__internship__text">
                 <h2 class="about__internship__title">INTERNSHIP 2015 - 2018</h2><br>
                 <p class="about__internship__details">
-                    2018 Yahoo! 冬季インターンシップ<br> 2018 Goodpatch 冬季インターンシップ　最優秀賞受賞<br> 2017 DeNA 「Delight U for Student」<br> 2017 CyberAgent 「UIDA」　UI発明賞受賞<br> 2017 CyberAgent Technical Creator Challenge<br> 2017 電通「アイディアの学校」　金賞受賞<br> 2016 チームラボ株式会社<br>                    2015 株式会社ライフイズテック
+                    2018 Nihonbashi β Creator<br>2018 Yahoo! 冬季インターンシップ<br> 2018 Goodpatch 冬季インターンシップ　最優秀賞受賞<br> 2017 DeNA 「Delight U for Student」<br> 2017 CyberAgent 「UIDA」　UI発明賞受賞<br> 2017 CyberAgent Technical Creator Challenge<br> 2017 電通「アイディアの学校」　金賞受賞<br> 2016 チームラボ株式会社<br>                    2015 株式会社ライフイズテック
                 </p>
             </div>
         </div>
