画像の読み込み完了のイベント取得

--- a/about.html
+++ b/about.html
@@ -154,7 +154,8 @@
     <footer class="footer">
         © 2018 Ryosuke Fujiki
     </footer>
-
+    <script src="js/image_load.js">
+    </script>
 
 </body>
 
