--- a/works.html
+++ b/works.html
@@ -197,6 +197,8 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.1.6/js/swiper.min.js"></script>
     <script src="js/swipe.js"></script>
+    <script src="js/image_load.js">
+    </script>
 </body>
 
 </html>
