--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@
     <footer class="footer">
         © 2018 Ryosuke Fujiki
     </footer>
-
+    <script src="js/image_load.js">
+    </script>
 </body>
 
 </html>
