--- a/scrapboard.html
+++ b/scrapboard.html
@@ -318,6 +318,8 @@
     <footer class="footer">
         © 2018 Ryosuke Fujiki
     </footer>
+    <script src="js/image_load.js">
+    </script>
 
 
 </body>
