プレイフルフェスにプロトタイプのリンクを追加

--- a/playfulfes.html
+++ b/playfulfes.html
@@ -123,6 +123,13 @@
                     <p class="content__subtitle">Overview</p>
                     <h2 class="content__title">ワークショップイベントのVisual Design</h2>
                     <p class="overview__text">DeNA 主催による「Delight U for Student」における「ワークショップイベントのLPを制作する」というテーマで制作した作品です。「21世紀の学びはワクワクするあそび。」という与えられたコンセプトから、配色、タイポグラフィ、などグラフィックに落とし込みました。さらに、与えられたテキスト情報を、構築したユーザーストーリーに基づくUIへと設計しました。</p>
+
+                    <div class="content__award">
+                        <p class="content__subtitle">Resource</p>
+                        <h2 class="content__title">プロトタイプURL</h2>
+                        <p class="overview__text">
+                            <a class="link__text playfulfesText" href="https://share.protopie.io/JuFJCZ55aGN" target="_blank">https://share.protopie.io/JuFJCZ55aGN</a>　プレイフルフェス 2018 WINTER</p>
+                    </div>
                 </div>
 
                 <!-- <div class="content__award">
