--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 
 
-    <h1 class="heading"><span class="text--letterspace">My Work</span>s</h1>
+    <h1 class="heading"><span class="text--letterspace">Work</span>s</h1>
 
     <section class="work__contents clearfix">
 
