--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
         <div class="about__skill clearfix">
             <img src="images/About/Skill.gif" alt="" class="sp_about__skill__img">
             <div class="about__skill__text">
-                <h2 class="about__skill__title">My Skill</h2><br>
+                <h2 class="about__skill__title">Skills</h2><br>
                 <p class="about__skill__details">
                     Adobe Illustrator / Photoshop<br> Adobe Premiere / AfterEffects<br> HTML / CSS / JavaScript / Python<br> Sketch
                     <br> ProtoPie
