playfulfesのカテゴリを変更

--- a/playfulfes.html
+++ b/playfulfes.html
@@ -112,7 +112,7 @@
     <div class="heroImg playfulfesImg">
         <p class="workNumber">04-05</p>
         <h1 class="heading">プレイフルフェス 2018 WINTER</h1>
-        <p class="workCategory">Visual Design / Art Direction / UX Design</p>
+        <p class="workCategory">Web Design / Visual Design / UX Design</p>
     </div>
 
     <section class="work__contents">
