hiveのカテゴリの名称を変更

--- a/hive.html
+++ b/hive.html
@@ -112,7 +112,7 @@
     <div class="heroImg hiveImg">
         <p class="workNumber">01-05</p>
         <h1 class="heading">Hive</h1>
-        <p class="workCategory">Logo Design / UI Design / UX Design</p>
+        <p class="workCategory">UI Design / UX Design / Logo Design</p>
     </div>
 
     <section class="work__contents">
