hiveの概要タイトルを変更

--- a/hive.html
+++ b/hive.html
@@ -121,7 +121,7 @@
             <div class="leftSide">
                 <div class="content__overview">
                     <p class="content__subtitle">Overview</p>
-                    <h2 class="content__title">Bot がサポートする Closed なメッセージアプリ</h2>
+                    <h2 class="content__title">Bot がサポートするメッセージアプリ</h2>
                     <p class="overview__text">Goodpatch 2018 冬季インターンシップ において開催された「家族 or カップルの関係性をより深 めるサービス」を考えるというテーマで制作したプロダクト。度重なるユーザーインタビュー を行い、ペルソナ、ユーザーストーリーを定め、一つのアプリケーションの形に落とし込みました。 カップルや家族が使用する専用のクローズドなメッセージアプリケーションで、Bot がメッセージ における関係性を支えます。</p>
                 </div>
 
