hiveの文言修正

--- a/hive.html
+++ b/hive.html
@@ -122,7 +122,7 @@
                 <div class="content__overview">
                     <p class="content__subtitle">Overview</p>
                     <h2 class="content__title">Bot がサポートするメッセージアプリ</h2>
-                    <p class="overview__text">Goodpatch 2018 冬季インターンシップ において開催された「家族 or カップルの関係性をより深 めるサービス」を考えるというテーマで制作したプロダクト。度重なるユーザーインタビュー を行い、ペルソナ、ユーザーストーリーを定め、一つのアプリケーションの形に落とし込みました。 カップルや家族が使用する専用のクローズドなメッセージアプリケーションで、Bot がメッセージ における関係性を支えます。</p>
+                    <p class="overview__text">Goodpatch 2018 冬季インターンシップ において開催された「家族 or カップルの関係性をより深めるサービス」を考えるというテーマで゙制作したプロダクト。度重なるユーザーインタビューを行い、ペルソナ、ユーザーストーリーを定め、一つのアプリケーションの形に落とし込みました。カップルや家族が使用する専用のクローズドなメッセージアプリケーションで、Bot がメッセージ における関係性を支えます。</p>
                 </div>
 
                 <div class="content__award">
@@ -170,7 +170,7 @@
             <div class="content__process clearfix">
                 <p class="content__subtitle">Process</p>
                 <h2 class="content__title">度重ねたユーザーインタビュー</h2>
-                <p class="content__text">チームメンバーとのアイディエーションによって、「長い付き合いのある特別な 2 人は信頼関係が あり今後の関係性において大きな変化より安定を求めている」という仮説を導き出しました。この仮定検証を行うために、想定するユーザー像に近い男女合わせて 10 名にユーザーインタビューを行いました。そうしたの過程の中で、確かに、長い付き合いのある特別な2人は大きな変化より 安定を求めていることがわかり、またいくつかの不満を持っていることに気がつきました。</p>
+                <p class="content__text">チームメンバーとのアイディエーションによって、「長い付き合いのある特別な 2 人は信頼関係が あり今後の関係性において大きな変化より安定を求めている」という仮説を導き出しました。この仮定検証を行うために、想定するユーザー像に近い男女合わせて 10 名にユーザーインタビューを行いました。そうしたの過程の中で、長い付き合いのある特別な2人は大きな変化より 安定を求めていることがわかり、またいくつかの不満を持っていることに気がつきました。</p>
                 <div class="imageContainer clearfix">
                     <img src="images/hive/process01.png" alt="" class="worksImg worksImg--Small worksImg--Small--left">
                     <img src="images/hive/process02.png" alt="" class="worksImg worksImg--Small worksImg--Small--right imageEven">
